# moonswift

./: .gitignore  .stylua.toml  .styluaignore  .swift-format  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  Package.resolved  Package.swift  README.md  RELEASING.md  REQUIREMENTS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Sources/CRatatuiFFI/: shim_stub.c
Sources/CRatatuiFFI/include/: module.modulemap  ratatui_ffi.h
Sources/CTreeSitterTOML/: NOTICE
Sources/CTreeSitterTOML/src/: parser.c  scanner.c
Sources/MoonSwiftCore/Catalog/: CatalogTypes.swift  LuaModuleCatalog.swift
Sources/MoonSwiftCore/Diagnostics/: Diagnostic.swift  LuaErrorDiagnostics.swift  LuaErrorLineParser.swift
Sources/MoonSwiftCore/JSONPath/: JSONPathAST.swift  JSONPathError.swift  JSONPathEvaluator.swift  JSONPathExpression.swift  JSONPathParser.swift
Sources/MoonSwiftCore/Lint/: LintService.swift  LuacheckLoader.swift
Sources/MoonSwiftCore/Logging/: Logger.swift
Sources/MoonSwiftCore/Project/: ProjectFile.swift  ProjectFileCodec.swift  ProjectStore.swift  ProjectValidation.swift
Sources/MoonSwiftCore/Run/: RunConfig.swift  RunService.swift
Sources/MoonSwiftCore/Sources/: FragmentProvenance.swift  SourceID.swift  SourceState.swift  SourceStore.swift  SpanLocator.swift  SpanSplicer+TOML.swift  SpanSplicer+YAML.swift  SpanSplicer.swift
Sources/MoonSwiftCore/Tree/: TreeDecoderJSON.swift  TreeDecoderTOML.swift  TreeDecoderYAML.swift  TreeValue.swift
Sources/MoonSwiftTUI/App/: AppDriver+EditorEffects.swift  AppDriver+NvimEffects.swift  AppDriver.swift  AppEvent.swift  AppState.swift  Coalescer.swift  Effect.swift  EventChannel.swift  EventPump.swift  EventSource.swift  Reducer.swift  TerminalSuspender.swift  TickSource.swift
Sources/MoonSwiftTUI/Highlight/: CaptureMapping.swift  Highlighter.swift
Sources/MoonSwiftTUI/Nvim/: EditorBridge.swift  MsgpackRPCFramer.swift  NvimGridState.swift  NvimKeyTranslator.swift  NvimProcessSupervisor+Probe.swift  NvimProcessSupervisor.swift  NvimRPCClient+Reader.swift  NvimRPCClient.swift  NvimRPCTypes.swift  NvimRedrawEvent.swift  NvimRedrawHandler.swift  WriteBackCoordinator.swift
Sources/MoonSwiftTUI/Render/: CommandInterpreter.swift  NvimConflictView.swift  NvimDiffView.swift  NvimGridView.swift  RatatuiKitBackend.swift  RecordingRenderBackend.swift  RenderCommand.swift  Renderer.swift
Sources/MoonSwiftTUI/Theme/: Capability.swift  DefaultTheme.swift  ThemeEngine.swift
Sources/RatatuiKit/: CellBuffer.swift  Events.swift  FFIError.swift  Layout.swift  Terminal.swift  Widgets.swift
Sources/moonswift/: CLIArguments.swift  CrashHandlers.swift  Main.swift  ShimEventSource.swift
Tests/Fixtures/error-missing-source/: moonswift.toml
Tests/Fixtures/error-non-string-field/: moonswift.toml
Tests/Fixtures/lint-clean/: moonswift.toml
Tests/Fixtures/lint-luaswift-modules/: luaswift-modules.lua
Tests/Fixtures/lint-opt-in-modules/: opt-in-modules.lua
Tests/Fixtures/lint-syntax-error/: moonswift.toml  syntax-error.lua
Tests/Fixtures/lint-undefined-global/: moonswift.toml  undefined-global.lua
Tests/Fixtures/parser-hostile-chunkname/: moonswift.toml
Tests/Fixtures/parser-hostile-message/: hostile-message.lua
Tests/Fixtures/run-return-value/: return-nil.lua  return-string.lua
Tests/Fixtures/run-runaway-loop/: moonswift.toml
Tests/Fixtures/run-sandbox-test/: moonswift.toml
Tests/Fixtures/structured-json/: config.json  moonswift.toml
Tests/Fixtures/structured-multi-doc/: moonswift.toml
Tests/Fixtures/structured-toml/: config.toml
Tests/Fixtures/structured-yaml/: config.yaml
Tests/MoonSwiftCoreTests/: IntegrationTests.swift  LoggerTests.swift  LuacheckSpikeTests.swift  MessagePackValueTests.swift
Tests/MoonSwiftCoreTests/Catalog/: CatalogTypesTests.swift  LuaModuleCatalogTests.swift
Tests/MoonSwiftCoreTests/Diagnostics/: LuaErrorDiagnosticsTests.swift  LuaErrorLineParserTests.swift
Tests/MoonSwiftCoreTests/JSONPath/: JSONPathTests.swift
Tests/MoonSwiftCoreTests/Lint/: LintServiceTests.swift
Tests/MoonSwiftCoreTests/Project/: ProjectFileCodecTests.swift  ProjectStoreFilesystemTests.swift  ProjectStoreTests.swift  ProjectValidationTests.swift
Tests/MoonSwiftCoreTests/Run/: RunServiceTests.swift
Tests/MoonSwiftCoreTests/Sources/: SourceStoreTests.swift  SpanLocatorTests.swift  SpanLocatorYAMLSemantics.swift  SpanSplicerTOMLTests.swift  (+2 more)
Tests/MoonSwiftPerfTests/: PerfTests.swift
Tests/MoonSwiftTUITests/: AppDriverEditorTests.swift  AppStateTUITests.swift  BottomPaneTests.swift  CodePaneTests.swift  CommandInterpreterTests.swift  DegradedStateTests.swift  DriverIntegrationTests.swift  EmptyStateTests.swift  EventChannelTests.swift  EventPumpTests.swift  FixtureFlowTests.swift  HelpOverlayTests.swift  HighlighterTests.swift  NavigatorTests.swift  PickerTests.swift  ReducerSequenceTests.swift  ReducerTests.swift  RendererTests.swift  SnapshotTests.swift  ThemeEngineTests.swift  TickSourceTests.swift
Tests/RatatuiKitTests/: CellBufferTests.swift  EventDecodingTests.swift  FFIErrorMappingTests.swift  FFIErrorTests.swift  LayoutTests.swift  TerminalLifecycleTests.swift  WidgetSmokeTests.swift
docs/: luaswift-p2-requirements-PRD.md
docs/internals/: catalog.md  editor-bridge-write-back.md  ffi-boundary.md  lint.md  ux-spec.md
docs/user/: cli.md  editing-and-write-back.md  linting.md  project-file.md  running.md  sources.md
rust/crossterm-patched/: Cargo.toml
rust/ratatui-ffi/: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  cbindgen.toml
rust/ratatui-ffi/src/: cells.rs  error.rs  events.rs  guard.rs  layout.rs  lib.rs  terminal.rs
rust/ratatui-ffi/src/ffi/: render.rs  safety.rs  util.rs
rust/ratatui-ffi/src/widgets/: block.rs  clear.rs  list.rs  mod.rs  paragraph.rs  tabs.rs
rust/ratatui-ffi/tools/: ffi_introspect.rs
scripts/: check-coverage.sh
(+145 files in other folders)
