[package]
name = "ratatui_ffi"
version = "0.2.6"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "C ABI bindings for Ratatui (Rust TUI) to consume from C/C#/etc."
repository = "https://github.com/holo-q/ratatui-ffi"
homepage = "https://github.com/holo-q/ratatui-ffi"
readme = "README.md"
keywords = ["tui", "terminal", "ffi", "c", "bindings"]
categories = ["api-bindings", "command-line-interface", "gui"]

[lib]
# "staticlib" added by the MoonSwift fork: the Swift package consumes a
# universal static lib wrapped in an XCFramework binaryTarget (ARCH §5.4).
# "cdylib" is retained to keep the upstream tooling (cbindgen, gen_header)
# working unchanged.
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "ffi_introspect"
path = "tools/ffi_introspect.rs"

[[bin]]
name = "gen_header"
path = "tools/gen_header.rs"

[features]
default = ["scrollbar" ]
# Compile-time safety checks (bounds, batch sizes, etc.).
# Disabled by default; enable for QA/dev to catch invalid inputs crossing the FFI.
ffi_safety = []
# Enable experimental Scrollbar support (requires newer Ratatui API). Off by default for crates.io compatibility.
scrollbar = []

[dependencies]
# ratatui pinned to the 0.29 minor (MoonSwift fork policy: pin to a specific
# minor; upgrades are deliberate dedicated tasks — ARCH §5.4, PRD §4.5).
ratatui = "0.29"
# crossterm pinned to 0.28.1: the exact version ratatui 0.29 uses internally.
# A single crossterm in the link graph is required (ARCH §5.4, PRD §4.5).
# Upstream ratatui-ffi v0.2.6 declared "0.27" — ported here to eliminate the
# dual-crossterm conflict that would otherwise arise from ratatui's transitive
# dependency on 0.28.1.
crossterm = "0.28.1"
bitflags = "2"
anstyle = "1"
anstream = "0.6"
indicatif = { version = "0.17", default-features = false, features = ["improved_unicode"] }
# libc: required by terminal.rs for async-signal-safe emergency restore
# (write(2), tcsetattr, termios) on Unix platforms.
libc = "0.2"

[package.metadata.docs.rs]
# Build docs with all features so optional APIs are visible.
all-features = true
# Enable `docsrs` cfg so `#[cfg_attr(docsrs, ...)]` works and feature badges render.
rustdoc-args = ["--cfg", "docsrs"]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[package.metadata.ffi_introspect]
# Where to emit generated FFI Rust code (symbols/palettes, etc.)
emit_rs = "src/ffi/generated.rs"
# Root path for referencing consts in the target crate (defaults to package name)
const_root = "ratatui"
# Name prefix for generated getter functions (defaults to first segment of package name)
fn_prefix = "ratatui"
# How to obtain target sources generically
# If git_tag is omitted, it is derived from Cargo.lock using dep_name.
git_url = "https://github.com/ratatui-org/ratatui.git"
dep_name = "ratatui"

# Emission filters (generic, no hardcoding required)
# The tool will generate &str getters for public consts whose module path starts with any of these prefixes.
symbol_namespaces = ["symbols::"]
# "module:file" entries; semicolon-separated string is also allowed for simpler parsers.
set_modules = "symbols::line:symbols/line.rs;symbols::border:symbols/border.rs;symbols::block:symbols.rs;symbols::bar:symbols.rs;symbols::scrollbar:symbols.rs"
dto_enum_u32 = ["Alignment", "BorderType"]
dto_renames = "layout::Rect=FfiRect"
const_modules = "symbols::half_block:symbols.rs;symbols::shade:symbols.rs;symbols::braille:symbols.rs"

# Macro names used by the generator (override to integrate with other projects)
macros.struct_str = "crate::ratatui_define_ffi_str_struct!"
macros.struct_u32 = "crate::ratatui_define_ffi_u32_struct!"
macros.const_str_getter = "crate::ratatui_const_str_getter!"
macros.const_char_getter = "crate::ratatui_const_char_getter!"
macros.const_u16_getter = "crate::ratatui_const_u16_getter!"
macros.const_struct_getter = "crate::ratatui_const_struct_getter!"
macros.const_color_u32_getter = "crate::ratatui_const_color_u32_getter!"
macros.const_palette_u32_getter = "crate::ratatui_const_palette_u32_getter!"
widgets_emit_rs = "src/ffi/generated_widgets.rs"
enums_emit_rs = "src/ffi/generated_enums.rs"
enums_emit = ["Alignment", "BorderType", "LegendPosition", "RenderDirection", "ListDirection", "Direction", "Flex", "GraphType", "Position", "Marker"]
enums_renames = "Alignment=FfiAlign;Position=FfiPosition;Marker=FfiMarker"

# ── Clippy lints ─────────────────────────────────────────────────────────────
#
# All `clippy::not_unsafe_ptr_arg_deref` findings in this crate are in `extern
# "C"` entry points that form the FFI surface.  Those functions *must* accept
# raw pointers by the C ABI contract; adding the `unsafe` keyword to them would
# break compatibility with every C/Swift caller.  The dereferences are all
# guard-wrapped (ffi_guard!) and are the intentional design — documented in
# ARCHITECTURE.md §5.2 and the fork README.  Allow it here rather than
# sprinkling #[allow] on every entry point.
#
# `clippy::missing_const_for_thread_local` fires on the thread-local
# last-error storage in guard.rs. The `const` form is a Rust 1.83+ feature;
# we pin to stable and do not require a minimum version that late yet.
#
# `clippy::explicit_counter_loop` in cells.rs: the loop increments a column
# counter whose type and semantics are checked against the C ABI layout; a zip
# rewrite would require an additional iterator construction and obscures intent.
#
# `clippy::too_many_arguments` on rffi_list_set_block / rffi_paragraph_set_block
# / rffi_tabs_set_block: the argument count matches the C ABI surface one-to-one;
# grouping them would require an additional C struct and break callers.
[lints.clippy]
not_unsafe_ptr_arg_deref   = "allow"
missing_const_for_thread_local = "allow"
explicit_counter_loop      = "allow"
too_many_arguments         = "allow"
